--- a/resources/public/templates/home.html
+++ b/resources/public/templates/home.html
@@ -32,40 +32,22 @@
 		  <span class="icon-bar"></span>
 		  <span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="#">Brand</a>
+		<a class="navbar-brand" href="#">Clojure Books</a>
 	  </div>
 
 	  <!-- Collect the nav links, forms, and other content for toggling -->
 	  <div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
-		  <li class="active"><a href="#">Link</a></li>
-		  <li><a href="#">Link</a></li>
-		  <li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-			<ul class="dropdown-menu">
-			  <li><a href="#">Action</a></li>
-			  <li><a href="#">Another action</a></li>
-			  <li><a href="#">Something else here</a></li>
-			  <li><a href="#">Separated link</a></li>
-			  <li><a href="#">One more separated link</a></li>
-			</ul>
-		  </li>
+		  <li><a href="#">Shelves</a></li>
+		  <li><a href="#">Books</a></li>
+		  <li><a href="#">Administration</a></li>
 		</ul>
-		<form class="navbar-form navbar-left" role="search">
-		  <div class="form-group">
-			<input type="text" class="form-control" placeholder="Search">
-		  </div>
-		  <button type="submit" class="btn btn-default">Submit</button>
-		</form>
 		<ul class="nav navbar-nav navbar-right">
-		  <li><a href="#">Link</a></li>
 		  <li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="cl-username">{{user.name}}</span><b class="caret"></b></a>
 			<ul class="dropdown-menu">
-			  <li><a href="#">Action</a></li>
-			  <li><a href="#">Another action</a></li>
-			  <li><a href="#">Something else here</a></li>
-			  <li><a href="#">Separated link</a></li>
+			  <li><a href="/profile">Edit Profile</a></li>
+			  <li><a href="/logout">Logout</a></li>
 			</ul>
 		  </li>
 		</ul>
