--- a/resources/public/templates/home.html
+++ b/resources/public/templates/home.html
@@ -10,51 +10,53 @@
     <title>Signin Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="../../assets/js/html5shiv.js"></script>
-      <script src="../../assets/js/respond.min.js"></script>
+      <script src="/assets/js/html5shiv.js"></script>
+      <script src="/assets/js/respond.min.js"></script>
     <![endif]-->
   </head>
 
   <body>
-	<nav class="navbar navbar-default" role="navigation">
-	  <!-- Brand and toggle get grouped for better mobile display -->
-	  <div class="navbar-header">
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-		  <span class="sr-only">Toggle navigation</span>
-		  <span class="icon-bar"></span>
-		  <span class="icon-bar"></span>
-		  <span class="icon-bar"></span>
-		</button>
-		<a class="navbar-brand" href="#">Clojure Books</a>
-	  </div>
-
-	  <!-- Collect the nav links, forms, and other content for toggling -->
-	  <div class="collapse navbar-collapse navbar-ex1-collapse">
-		<ul class="nav navbar-nav">
-		  <li><a href="#">Shelves</a></li>
-		  <li><a href="#">Books</a></li>
-		  <li><a href="#">Administration</a></li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-		  <li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="cl-username">{{user.name}}</span><b class="caret"></b></a>
-			<ul class="dropdown-menu">
-			  <li><a href="/profile">Edit Profile</a></li>
-			  <li><a href="/logout">Logout</a></li>
+  	<div class="container">
+  		<nav class="navbar navbar-default" role="navigation">
+		  <!-- Brand and toggle get grouped for better mobile display -->
+		  <div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+			  <span class="sr-only">Toggle navigation</span>
+			  <span class="icon-bar"></span>
+			  <span class="icon-bar"></span>
+			  <span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="/">Clojure Books</a>
+		  </div>
+	
+		  <!-- Collect the nav links, forms, and other content for toggling -->
+		  <div class="collapse navbar-collapse navbar-ex1-collapse">
+			<ul class="nav navbar-nav">
+			  <li><a href="/shelves">Shelves</a></li>
+			  <li><a href="/books">Books</a></li>
+			  <li><a href="/administration">Administration</a></li>
 			</ul>
-		  </li>
-		</ul>
-	  </div><!-- /.navbar-collapse -->
-	</nav>
-    <div class="container">
-	</div>
+			<ul class="nav navbar-nav navbar-right">
+			  <li class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="cl-username">{{user.name}}</span><b class="caret"></b></a>
+				<ul class="dropdown-menu">
+				  <li><a href="/profile">Edit Profile</a></li>
+				  <li><a href="/logout">Logout</a></li>
+				</ul>
+			  </li>
+			</ul>
+		  </div><!-- /.navbar-collapse -->
+		</nav>
+	    <div class="content">
+		</div>
+  	</div>
 	<div class="script"></div>
 	<script type="text/javascript" src="/js/jQuery.js"></script>
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
