Added ajax loading.

--- a/bin/public/templates/home.html
+++ b/bin/public/templates/home.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/main.css" rel="stylesheet">
-
+    
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="/assets/js/html5shiv.js"></script>
@@ -54,11 +54,16 @@
 			</ul>
 		  </div><!-- /.navbar-collapse -->
 		</nav>
-	    <div class="content">
+		<div class="main-content">
+			<div id="loadingDiv">
+			</div>
+		    <div class="content">
+			</div>
 		</div>
   	</div>
 	<div class="script"></div>
 	<script type="text/javascript" src="/js/jQuery.js"></script>
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+
   </body>
 </html>
