--- a/bin/public/css/main.css
+++ b/bin/public/css/main.css
@@ -3,6 +3,20 @@ body {
   background-color: #ffffff;
 }
 
+
+.main-content {
+	position: relative;
+}
+
+#loadingDiv {
+  background-color: grey;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  opacity: 0.7; 
+  z-index: 10000;
+  display:none;
+}
+
 .form-auth {
   max-width: 330px;
   padding: 15px;
