--- a/resources/public/templates/home.html
+++ b/resources/public/templates/home.html
@@ -57,8 +57,7 @@
 		<div class="main-content">
 			<div id="loadingDiv">
 			</div>
-		    <div class="content">
-			</div>
+		    <div class="content"></div>
 		</div>
   	</div>
 	<div class="script"></div>
