--- a/bin/public/templates/home.html
+++ b/bin/public/templates/home.html
@@ -39,15 +39,15 @@
 		  <!-- Collect the nav links, forms, and other content for toggling -->
 		  <div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
-			  <li><a href="/shelves">Shelves</a></li>
-			  <li><a href="/books">Books</a></li>
-			  <li><a href="/administration">Administration</a></li>
+			  <li><a href="/#/shelves">Shelves</a></li>
+			  <li><a href="/#/books">Books</a></li>
+			  <li class="adminonly"><a href="/#/users">Users</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 			  <li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="cl-username">{{user.name}}</span><b class="caret"></b></a>
 				<ul class="dropdown-menu">
-				  <li><a href="/profile">Edit Profile</a></li>
+				  <li><a href="/#/profile">Edit Profile</a></li>
 				  <li><a href="/logout">Logout</a></li>
 				</ul>
 			  </li>
